[package]
name = "diesel-geography"
version = "0.1.0"
authors = ["Boscop"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Boscop/diesel-geography"
documentation = "https://docs.rs/diesel-geography"
description = "Diesel support for PostGIS geography types and functions"
keywords = ["database", "sql", "orm"]
categories = ["database"]

[dependencies]
diesel = { version = "1.3", features = ["postgres"] }
postgis = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
